# atelier

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.server  Dockerfile.server-runtime  README.md  REMOTE_SERVERS_PLAN.md  TRUE_HEADLESS_PLAN.md  eslint.config.js  icon.sh  package.json
.github/workflows/: server-release.yml
crates/jean-core/: Cargo.toml
crates/jean-core/src/: auth.rs  capabilities.rs  capabilities_generated.rs  chat.rs  config.rs  (+15 more)
docs/: headless-server.md
docs/developer/: architecture-guide.md  releases.md  remote-servers.md
scripts/: docker-entrypoint.sh  generate-headless-capabilities.mjs  server-ci-assets.test.mjs  test-remote-provision-lima.mjs
src/: App.css  App.tsx
src-server/: Cargo.toml
src-server/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_runtime.rs  jean_mcp_core.rs  lib.rs
src/hooks/: use-command-context.ts  useMainWindowEventListeners.ts  useUIStatePersistence.test.tsx  useUIStatePersistence.ts
src/lib/: remote-versions.ts  session-debug.ts  terminal-composition-guard.test.ts  terminal-composition-guard.ts  terminal-instances.ts  terminal-local-links.test.ts  terminal-local-links.ts  worktree-labels.ts
src/services/: chat.ts  commandcode-cli.ts  preferences.test.ts  projects.ts  remote-servers.ts  scheduled-prompts.ts
src/store/: chat-store.test.ts  chat-store.ts  projects-store.test.ts  projects-store.ts  ui-store.ts
src/types/: chat.ts  commandcode-cli.ts  preferences.ts  projects.ts  remote.ts  scheduled-prompts.ts  ui-state.ts
(+111 files in other folders)
